--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "postcss": "^8.4.27",
